[gd_scene load_steps=9 format=3 uid="uid://dldqfgp2a8lih"]

[ext_resource type="Script" path="res://scripts/level_end.gd" id="1_t7lga"]
[ext_resource type="FontFile" uid="uid://cjeggffpppohb" path="res://assets/Agave/AgaveNerdFont-Regular.ttf" id="2_dnv6h"]
[ext_resource type="FontFile" uid="uid://ci4hy5h1ty1og" path="res://assets/Agave/AgaveNerdFontMono-Regular.ttf" id="3_pilmi"]
[ext_resource type="Texture2D" uid="uid://2p0bufvmud6a" path="res://assets/Characters/cedar-04-portrait-48x48.png" id="4_2xdek"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p7dh1"]
resource_local_to_scene = true
size = Vector2(648, 20)

[sub_resource type="Animation" id="Animation_4e88m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_lda74"]
resource_name = "ui_visibility"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.433333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4h2x5"]
_data = {
"RESET": SubResource("Animation_4e88m"),
"ui_visibility": SubResource("Animation_lda74")
}

[node name="LevelEnd" type="Area2D"]
process_mode = 3
collision_mask = 2
script = ExtResource("1_t7lga")

[node name="Finishline" type="CollisionShape2D" parent="."]
position = Vector2(314, 0)
shape = SubResource("RectangleShape2D_p7dh1")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Menu" type="ColorRect" parent="UI"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.211765, 0.243137, 0.478431, 1)

[node name="Container" type="ColorRect" parent="UI/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 35.0
offset_top = 27.0
offset_right = -39.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.419608, 0.670588, 0.854902, 1)

[node name="Label" type="Label" parent="UI/Menu/Container"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -113.0
offset_top = 52.0
offset_right = 391.0
offset_bottom = 91.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_dnv6h")
theme_override_font_sizes/font_size = 30
text = "Level complete"

[node name="Border" type="ColorRect" parent="UI/Menu/Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.309804, 0.176471, 0.458824, 0.772549)

[node name="TimeCompleted" type="ColorRect" parent="UI/Menu/Container"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 55.0
offset_top = -24.0
offset_right = 55.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="UI/Menu/Container/TimeCompleted"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 210.0
offset_right = 546.0
offset_bottom = 27.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_dnv6h")
theme_override_font_sizes/font_size = 26
text = "Time: "

[node name="Value" type="Label" parent="UI/Menu/Container/TimeCompleted"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -668.0
offset_right = -268.0
offset_bottom = 27.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.580392, 0.984314, 0.682353, 0.956863)
theme_override_fonts/font = ExtResource("3_pilmi")
theme_override_font_sizes/font_size = 25
text = "0"

[node name="Score" type="ColorRect" parent="UI/Menu/Container"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 54.0
offset_top = -33.0
offset_right = 54.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/Menu/Container/Score"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 210.0
offset_top = 40.0
offset_right = 354.0
offset_bottom = 67.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_dnv6h")
theme_override_font_sizes/font_size = 26
text = "Score:"

[node name="Value" type="Label" parent="UI/Menu/Container/Score"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -668.0
offset_top = 40.0
offset_right = -268.0
offset_bottom = 67.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.714045, 0.919369, 0.962179, 0.956863)
theme_override_fonts/font = ExtResource("3_pilmi")
theme_override_font_sizes/font_size = 25
text = "0"

[node name="ContinueButton" type="Button" parent="UI/Menu/Container"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -131.0
offset_top = -77.0
offset_right = 129.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.808196, 0.944057, 0.416054, 0.956863)
theme_override_fonts/font = ExtResource("2_dnv6h")
theme_override_font_sizes/font_size = 25
text = "Continue"

[node name="SaveContinueButton2" type="Button" parent="UI/Menu/Container"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -77.0
offset_right = -240.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.808196, 0.944057, 0.416054, 0.956863)
theme_override_fonts/font = ExtResource("2_dnv6h")
theme_override_font_sizes/font_size = 25
text = "Save & Continue"

[node name="QuitButton" type="Button" parent="UI/Menu/Container"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -296.0
offset_top = -77.0
offset_right = -36.0
offset_bottom = -18.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.807843, 0.945098, 0.415686, 0.956863)
theme_override_fonts/font = ExtResource("2_dnv6h")
theme_override_font_sizes/font_size = 25
text = "Quit"

[node name="Sprite2D" type="Sprite2D" parent="UI/Menu"]
position = Vector2(713, 328)
scale = Vector2(4.75, 4.75)
texture = ExtResource("4_2xdek")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4h2x5")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="pressed" from="UI/Menu/Container/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="UI/Menu/Container/SaveContinueButton2" to="." method="_on_save_continue_button_2_pressed"]
[connection signal="pressed" from="UI/Menu/Container/QuitButton" to="." method="_on_quit_button_pressed"]
